--- a/index.html
+++ b/index.html
@@ -17,11 +17,33 @@
          <img src="photos/logo.png"/ alt="logo" class="navbar_logo">
          </div>
          <div class="navbar_nav_iteams">
-             <button class="nav_iteam">
+             <button class="nav_iteam button_primary">
                  Order Food
              </button>
          </div>
         </nav>
     </header>
+    <main class="container">
+          <!-- Hero section-->
+          <section class="hero_container">
+              <div class="hero_image_container">
+                  <img src="./photos/hero.jpg" alt="hero image " class="hero_image"/>
+                  <!--<img src="./photos/background.jpg" class="h"/>!-->
+              </div>
+              <div class="hero_discripton">
+               <h1 class="hero_text">Order Food from favourite resturant near you.</h1>
+               <button class="button_primary">
+                   Order Now
+               </button>
+              </div>
+
+          </section>
+          <section class="explore_menu_container">
+              <h1 class="explore_menu_text">Explore Our Menu</h1>
+              <div class="explore_menu_lists">
+                  
+              </div>
+          </section>
+    </main>
 </body>
 </html>
