--- a/index.html
+++ b/index.html
@@ -40,8 +40,47 @@
           </section>
           <section class="explore_menu_container">
               <h1 class="explore_menu_text">Explore Our Menu</h1>
+<div class="explore_menu_gradient_bg"></div>
               <div class="explore_menu_lists">
-                  
+              <!-- Burger -->
+                <div class="food_card">
+                      <div class="food_card_image_container">
+                          <img src="./photos/burger.jpg" alt="burger" class="food_image"/>                  
+                      </div>
+                      <div class="food_card_discription">
+                        <h3 class="food_title"> Burger</h3>
+                        <p> Burger king,Mcdonal,Burger place
+                             <span style="color: red;">+3</span>
+                            </p>
+                      </div>
+                  </div>
+                  <div class="food_card" id="pizza_card">
+                    <div class="food_card_image_container">
+                        <img src="./photos/pizza.jpg" alt="Pizza" class="food_image"/>                  
+                    </div>
+                    <div class="food_card_discription">
+                      <h3 class="food_title"> Burger</h3>
+                      <p> Pizza Hut ,Domino's Pizza
+                           <span style="color: red;">+3</span>
+                          </p>
+                    </div>
+                </div>
+                <div class="food_card">
+                    <div class="food_card_image_container">
+                        <img src="./photos/ice cream.jpg" alt="ice cream" class="food_image"/>                  
+                    </div>
+                    <div class="food_card_discription">
+                      <h3 class="food_title"> Burger</h3>
+                      <p> Basking Robins,Ibaco
+                     <span style="color: red;">+3</span>
+                          </p>
+                    </div>
+                </div>
+              </div>
+              <div class="explore_menu_view_more">
+                <button class="button_primary">
+                    View More
+                </button>
               </div>
           </section>
     </main>
