--- a/index.html
+++ b/index.html
@@ -1,88 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com"/>
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
-<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet"/>
-    <link href="style.css" rel="stylesheet"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
+        rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <header>
         <nav class="navbar">
-         <div class="navbar_brand">
-         <img src="photos/logo.png"/ alt="logo" class="navbar_logo">
-         </div>
-         <div class="navbar_nav_iteams">
-             <button class="nav_iteam button_primary">
-                 Order Food
-             </button>
-         </div>
+            <div class="navbar_brand">
+                <img src="photos/logo.png" / alt="logo" class="navbar_logo">
+            </div>
+            <div class="navbar_nav_iteams">
+                <button class="nav_iteam button_primary">
+                    Order Food
+                </button>
+            </div>
         </nav>
     </header>
     <main class="container">
-          <!-- Hero section-->
-          <section class="hero_container">
-              <div class="hero_image_container">
-                  <img src="./photos/hero.jpg" alt="hero image " class="hero_image"/>
-                  <!--<img src="./photos/background.jpg" class="h"/>!-->
-              </div>
-              <div class="hero_discripton">
-               <h1 class="hero_text">Order Food from favourite resturant near you.</h1>
-               <button class="button_primary">
-                   Order Now
-               </button>
-              </div>
+        <!-- Hero section-->
+        <section class="hero_container">
+            <div class="hero_image_container">
+                <img src="./photos/hero.jpg" alt="hero image " class="hero_image" />
+                <!--<img src="./photos/background.jpg" class="h"/>!-->
+            </div>
+            <div class="hero_discripton">
+                <h1 class="hero_text">Order Food from favourite resturant near you.</h1>
+                <button class="button_primary">
+                    Order Now
+                </button>
+            </div>
 
-          </section>
-          <section class="explore_menu_container">
-              <h1 class="explore_menu_text">Explore Our Menu</h1>
-<div class="explore_menu_gradient_bg"></div>
-              <div class="explore_menu_lists">
-              <!-- Burger -->
+        </section>
+        <section class="explore_menu_container">
+            <h1 class="explore_menu_text">Explore Our Menu</h1>
+            <div class="explore_menu_gradient_bg"></div>
+            <div class="explore_menu_lists">
+                <!-- Burger -->
                 <div class="food_card">
-                      <div class="food_card_image_container">
-                          <img src="./photos/burger.jpg" alt="burger" class="food_image"/>                  
-                      </div>
-                      <div class="food_card_discription">
+                    <div class="food_card_image_container">
+                        <img src="./photos/burger.jpg" alt="burger" class="food_image" />
+                    </div>
+                    <div class="food_card_discription">
                         <h3 class="food_title"> Burger</h3>
                         <p> Burger king,Mcdonal,Burger place
-                             <span style="color: red;">+3</span>
-                            </p>
-                      </div>
-                  </div>
-                  <div class="food_card" id="pizza_card">
+                            <span style="color: red;">+3</span>
+                        </p>
+                    </div>
+                </div>
+                <div class="food_card" id="pizza_card">
                     <div class="food_card_image_container">
-                        <img src="./photos/pizza.jpg" alt="Pizza" class="food_image"/>                  
+                        <img src="./photos/pizza.jpg" alt="Pizza" class="food_image" />
                     </div>
                     <div class="food_card_discription">
-                      <h3 class="food_title"> Burger</h3>
-                      <p> Pizza Hut ,Domino's Pizza
-                           <span style="color: red;">+3</span>
-                          </p>
+                        <h3 class="food_title"> Burger</h3>
+                        <p> Pizza Hut ,Domino's Pizza
+                            <span style="color: red;">+3</span>
+                        </p>
                     </div>
                 </div>
                 <div class="food_card">
                     <div class="food_card_image_container">
-                        <img src="./photos/ice cream.jpg" alt="ice cream" class="food_image"/>                  
+                        <img src="./photos/ice cream.jpg" alt="ice cream" class="food_image" />
                     </div>
                     <div class="food_card_discription">
-                      <h3 class="food_title"> Burger</h3>
-                      <p> Basking Robins,Ibaco
-                     <span style="color: red;">+3</span>
-                          </p>
+                        <h3 class="food_title"> Burger</h3>
+                        <p> Basking Robins,Ibaco
+                            <span style="color: red;">+3</span>
+                        </p>
                     </div>
                 </div>
-              </div>
-              <div class="explore_menu_view_more">
+            </div>
+            <div class="explore_menu_view_more">
                 <button class="button_primary">
                     View More
                 </button>
-              </div>
-          </section>
+            </div>
+        </section>
+        <!-- Restaurant list-->
+        <section class="resturant_container">
+            <h1 class="resturant_text">Order from 100s of resturants </h1>
+            <div class="resturant_images_container">
+                <div class="resturant_images_row_one">
+                    <div class="resturant_image_1"> <img src="./photos/r2.jpg" alt="resturant1" class="resturan_1"/></div>
+                    <div class="resturant_images_row_2"> <img src="./photos/r1.jpg" alt="resturant2" class="resturan_2"/></div>
+                </div>
+                <div class="resturant_images_row_two">
+                    <div class="resturant_image_3"> <img src="./photos/r3.jpg" alt="resturant3" class="resturan_3"/> </div>
+                    <div class="resturant_images_row_4"> <img src="./photos/r4.jpg" alt="resturant4" class="resturan_4"/></div>
+
+                </div>
+            </div>
+
+        </section>
     </main>
 </body>
+
 </html>
